--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -17,9 +17,10 @@ jobs:
       run: cmake -S . -B build
 
     - name: Build
-      run: cmake --build build --parallel
+      working-directory: ${{github.workspace}}/build
+      run: cmake --build . --parallel
 
     - name: Test
-      working-directory: ${{github.workspace}}/build
+      working-directory: ${{github.workspace}}/build/tests
       run: ctest
 
