--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -7,29 +7,22 @@ on:
     branches: [ "master" ]
 
 jobs:
-  cpp-linter:
+  cpplint:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: cpp-linter/cpp-linter-action@main
-        id: linter
-        continue-on-error: true
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          style: file
-          files-changed-only: false
+    - uses: actions/checkout@v1
 
-      - name: Fail fast?!
-        if: steps.linter.outputs.checks-failed != 0
-        run: |
-          echo "some linter checks failed. ${{ steps.linter.outputs.checks-failed }}"
-        # for actual deployment
-        # run: exit 1
+    - uses: actions/setup-python@v4
+      with:
+        python-version: 3.x
+
+    - run: python -m pip install cpplint
+
+    - run: cpplint --recursive .
 
   build:
     needs:
-      ["cpp-linter"]
+      ["cpplint"]
     runs-on: ubuntu-latest
 
     steps:
