--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -2,7 +2,7 @@ add_library(datastructures INTERFACE)
 
 target_sources(datastructures
 	INTERFACE
-		"datastructures/dynamic_array.h"
+		"datastructures/dynamic_array.hpp"
 )
 
 target_include_directories(datastructures
