doubly linked list

--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -3,6 +3,7 @@ add_library(datastructures INTERFACE)
 target_sources(datastructures
 	INTERFACE
 		"datastructures/dynamic_array.hpp"
+		"datastructures/doubly_linked_list.hpp"
 )
 
 target_include_directories(datastructures
